Added another note

--- a/aip.tex
+++ b/aip.tex
@@ -1596,6 +1596,10 @@ Since this intersection is a compact set and objective function is continuous, t
 \emily[inline]{Thanks, Pedro.  It's like you exactly read our minds--we came up with the \emph{exact same} example yesterday on the bus after I got stuck on the proof!  We also concluded that it would be best to describe everything in terms of $\Sigma^\circ$.  I've started this}
 \pedro[inline]{
    ``Great minds think alike''?   :-)
+
+   Maybe what we should do is define the feasible set for $\fip_p(A,\vv{u})$ to be the \emph{closure} of the set of all $\vv{t}\in \sierp_p$ satisfying $A\vv{t} < \vv{u}$.
+   This way we can talk about value in the usual way, and can also talk about optimal points.
+   We can also include a remark saying that that is not as simple as taking the set of all $\vv{t}\in \sierp_p$ satisfying $A\vv{t} \le \vv{u}$ (though these sets often agree), and present our example.
 }
 
 \begin{proposition}  
