Minor additions to Frobenius Powers section

--- a/preamble.tex
+++ b/preamble.tex
@@ -16,7 +16,6 @@
 \usepackage{soul}
 \usepackage{microtype}
 
-
 %clever ref package 
 %must come before following 3 sections
 \usepackage{cleveref}  %must be consistent with names in following 3 sections
@@ -46,6 +45,7 @@
 %remark style environments
 \theoremstyle{remark}
 \newtheorem{remark}[theorem]{Remark}
+\newtheorem{notation}[theorem]{Notation}
 \newtheorem*{convention}{Convention}
 
 
@@ -121,7 +121,7 @@
 \newcommand{\graph}{\mathfrak{S}}
 \newcommand{\sierp}{\mathscr{S}}
 \newcommand{\fip}{\Sigma}
-\DeclareMathOperator{\sprouts}{sp}
+\DeclareMathOperator{\sprout}{sprout}
 \newcommand{\sproutsfrom}[2]{#1 \leftarrow #2}
 %\newcommand{\sproutsfrom}[2]{#1 \in \operatorname{sp} #2}
 \newcommand{\collapse}{\widebar}
