--- a/aip.tex
+++ b/aip.tex
@@ -57,9 +57,10 @@ TO DO LIST:
 
 \ \pedro[inline]{If anyone wishes, we can make some or all of this more formal: definitions, remarks, theorems\ldots}
 \emily[inline]{I like it how it is.  Is ``euclidean'' typically capitalized?}
+\pedro[inline]{Google Ngram shows that ``Euclidean'' beats ``euclidean'' by far, so I made the change.}
 
-We review in this subsection some of the terminology, notation, and constructions concerning euclidean spaces and convex geometry used throughout the paper.
-We use bold-face lower-case letters to denote points of the euclidean space $\RR^n$, and the same letter, in regular font, to represent their coordinates (\eg $\vv{v}=(v_1,\ldots,v_n)$).
+We review in this subsection some of the terminology, notation, and constructions concerning Euclidean spaces and convex geometry used throughout the paper.
+We use bold-face lower-case letters to denote points of the Euclidean space $\RR^n$, and the same letter, in regular font, to represent their coordinates (\eg $\vv{v}=(v_1,\ldots,v_n)$).
 The points $(0,\ldots,0)$ and $(1,\ldots,1)$ are denoted $\vv{0}$ and $\vv{1}$, and the standard basis vectors of $\RR^n$ are denoted $\canvec_1,\ldots,\canvec_n$.
 
 Given a point $\vv{u}\in \RR^n$, $\norm{\vv{u}}$ denotes its coordinate sum, $u_1+\cdots+u_n$.
