--- a/aip.tex
+++ b/aip.tex
@@ -43,7 +43,7 @@ TO DO LIST:
  \item[$\Box$] ``Fractal linear program;'' solve $P$ in ``Sierpinski gasket''
  \item[$\Box$] Direct proof that $\delta$/$\Delta$ are independent of $\vv{s}$.
  \item[$\Box$] Minimize and/or ``algebrafy'' statements.
- \item[$\Box$] Background section on Frobenius powers, $\mu$, $\nu$, etc.
+ \item[$\CheckedBox$] Background section on Frobenius powers, $\mu$, $\nu$, etc.
  \item[$\Box$] Derive some easy corollaries for very general hypersurfaces.
  \item[$\Box$] Generalize the definition of $\IP$ so that $\IP(A, \vv{u}q)$ becomes $\IP(A, \vv{u}, q)$?  
 \end{enumerate}
