--- a/aip.tex
+++ b/aip.tex
@@ -20,6 +20,7 @@ TO DO LIST:
 \begin{enumerate}
  \item[$\CheckedBox$] Write essential statements/proofs.
  \item[$\Box$] Decide on name of paper.
+ \emily[inline]{How about \emph{Fractal and arithmetic programs, and the Frobenius powers of monomial ideals}?}
  \item[$\Box$] Decide on name for minimal coordinate.
  \pedro[inline]{
     Do we have a consensus for ``special points''? If so, I'll go ahead and make the change. 
@@ -47,6 +48,7 @@ TO DO LIST:
  \item[$\Box$] Derive some easy corollaries for very general hypersurfaces.
  \item[$\Box$] Generalize the definition of $\IP$ so that $\IP(A, \vv{u}q)$ becomes $\IP(A, \vv{u}, q)$?  
  \daniel[inline]{Any thoughts on this?  The main reason for doing so to me is that it starts to get ugly when we add subscripts to the terms in $(A, \vv{u}, q)$ like we do when dealing with paths and iterated lifting.  It is also more consistent with the notation for $\ip$.  But, I could live with the $\vv{u}q$ version if someone feels strongly about this.}
+ \emily[inline]{I like $(A, \vv{u}, q)$ best, but don't mind so much either way.}
 \end{enumerate}
 }
 
