Replaced minimal coordinate with special point

--- a/preamble.tex
+++ b/preamble.tex
@@ -103,7 +103,7 @@
 %random
 \newcommand{\col}{\operatorname{col}}
 \newcommand{\mf}{\operatorname{mf}}
-\newcommand{\mc}{\operatorname{mc}}
+\renewcommand{\sp}{\operatorname{sp}}
 \newcommand{\rep}{\operatorname{rep}}
 \newcommand{\lis}{\operatorname{list}}
 \newcommand{\Q}{\mathcal{Q}}
