--- a/aip.tex
+++ b/aip.tex
@@ -36,10 +36,6 @@ TO DO LIST:
  
 \item[$\CheckedBox$] Make sprout notation.
 \comment[inline]{Going with $\sprout(A,\vv{u},p)$}
- % \daniel[inline]{I saw that someone used $\operatorname{sp}$ for sprouts.  One possible issue is that we may want to reserve this for ``special points", which we had already proposed as a replacement for ``minimal corodinate".  Another things to keep in mind is that sprouting depends on $p \in \ZZ$, so this should also be taken into account.}
- % \pedro[inline]{How about simply ``$\operatorname{sprout}(A,\vv{u},p)$''? ``$\operatorname{sprout}_p(A,\vv{u})$''? ``$p\text{-sprout}(A,\vv{u})$"? I think the first is probably the most obvious and most consistent with other notation in the paper.
- % \emily[inline]{I like the first option.} \daniel[inline]{OK.  Let's adopt this then.}
- % }
 \item[$\Box$] Put in examples.
  \item[$\Box$] Decide on how to define $\widehat{\witt}$.  (Sprouting graph?)
 
@@ -59,7 +55,10 @@ TO DO LIST:
  \item[$\Box$] Generalize the definition of $\IP$ so that $\IP(A, \vv{u}q)$ becomes $\IP(A, \vv{u}, q)$?  
  \daniel[inline]{Any thoughts on this?  The main reason for doing so to me is that it starts to get ugly when we add subscripts to the terms in $(A, \vv{u}, q)$ like we do when dealing with paths and iterated lifting.  It is also more consistent with the notation for $\ip$.  But, I could live with the $\vv{u}q$ version if someone feels strongly about this.}
  \emily[inline]{I like $(A, \vv{u}, q)$ best, but don't mind so much either way.}
- \pedro[inline]{Let's change to $\IP(A,\vv{u},q)$, then.}
+ \pedro[inline]{I started changing to $\IP(A,\vv{u},q)$. Are we going to abbreviate $\IP(A,\vv{u},1)$ by $\IP(A,\vv{u})$? Or insist on always having a $q$, so, for example, the statement of Lemma~7.3 would become ``[\ldots] the quotient when dividing any optimal point of $\IP_p(A, \vv{u}, qp^e)$ by $p^e$ must be optimal for $\IP_p(A, \vv{u}, q)$''?
+
+ }
+ \item[$\Box$] Replace ``Lemma'' with ``Proposition'', if there's no immediate application in sight.
 \end{enumerate}
 }
 
@@ -99,45 +98,47 @@ The \emph{relative interior} of a subset $\mathcal{U}$ of $\RR^n$, denoted $\ri 
 \pedro{Is there a more explicit/concrete characterization for polyhedra/polytopes?}
 For later use, we observe that, when restricted to convex sets, the relative interior operator commutes with Minkowski sums: if $\mathcal{U}$ and $\mathcal{V}$ are convex subsets of $\RR^n$, then $\ri(\mathcal{U}+\mathcal{V})=\ri \mathcal{U}+\ri \mathcal{V}$.
 
-\pedro[inline]{
-   Any objection to calling the results below ``Propositions''?
-   (And more generally, doing the same to any other basic result that doesn't have an immediate application in sight?)
-\daniel[inline]{Let's do this}
-}
-
-\begin{lemma}  
+\begin{proposition}  
    \label{bounded polytope: L}
    Let $\vv{a}$ and $\vv{c}$ be points in $\RR^m$, and suppose that $\vv{a}$ has positive coordinates.
    If $\alpha$ is any real number, then the polyhedron consisting of all points $\vv{b} \in \RR^m$ such that  $\vv{b} \le \vv{c} \text{ and } \iprod{\vv{a}}{\vv{b}} \geq \alpha$ is bounded.
-\end{lemma}
+\end{proposition}
 
 \begin{proof}
-   Suppose that the polyhedron $P$ described above is nonempty.
-   To show that $P$ is bounded, it suffices to show that its recession cone is trivial.
-   In other words, fix $\vv{b} \in P$ and suppose that $\vv{d} \in \RR^m$ is such that $\vv{b} + \lambda \vv{d} \in P$ for all $\lambda > 0$.
-   To show that $P$ is bounded, we must show that $\vv{d} = \vv{0}$.
-   However,  the constraint $\vv{b} + \lambda \vv{d} \le \vv{c}$ for all $\lambda>0$ implies that $\vv{d} \leq \vv{0}$, and combining this with the constraint $\iprod{\vv{a}}{\vv{b} + \lambda \vv{d}} \geq \alpha$ for all $\lambda > 0$ and the positivity of $\vv{a}$ then implies that no coordinate of $\vv{d}$ can be negative.
-\end{proof}
-
-\pedro[inline]{
-   Here is an alternate, more explicit proof:
-
    It suffices to show that the given set is bounded from below.
    For each $\vv{b}$ in that set and each $i$, we have $\vv{b}\le \vv{c} + (b_i - c_i)\canvec_i$.
    As $\vv{a}$ has positive coordinates, $\alpha\le \iprod{\vv{a}}{\vv{b}}\le \iprod{\vv{a}}{\vv{c} + (b_i -c_i)\canvec_i} = 
   \iprod{\vv{a}}{\vv{c}} + a_i(b_i - c_i)$, so $b_i\ge (\alpha + a_ic_i - \iprod{\vv{a}}{\vv{c}})/a_i$.
+\end{proof}
 
-\daniel[inline]{I prefer this proof.  Shorter, more direct.  We should replace the current proof with this one.  Another benefit of this is that we would no longer need to mention the Minkowski-Weyl Theorem (I didn't know it had a name!) since we would no longer need to make serious use of the recession cone.}
-}
+% \begin{proof}
+%    Suppose that the polyhedron $P$ described above is nonempty.
+%    To show that $P$ is bounded, it suffices to show that its recession cone is trivial.
+%    In other words, fix $\vv{b} \in P$ and suppose that $\vv{d} \in \RR^m$ is such that $\vv{b} + \lambda \vv{d} \in P$ for all $\lambda > 0$.
+%    To show that $P$ is bounded, we must show that $\vv{d} = \vv{0}$.
+%    However,  the constraint $\vv{b} + \lambda \vv{d} \le \vv{c}$ for all $\lambda>0$ implies that $\vv{d} \leq \vv{0}$, and combining this with the constraint $\iprod{\vv{a}}{\vv{b} + \lambda \vv{d}} \geq \alpha$ for all $\lambda > 0$ and the positivity of $\vv{a}$ then implies that no coordinate of $\vv{d}$ can be negative.
+% \end{proof}
+
+% \pedro[inline]{
+%    Here is an alternate, more explicit proof:
+
+%    It suffices to show that the given set is bounded from below.
+%    For each $\vv{b}$ in that set and each $i$, we have $\vv{b}\le \vv{c} + (b_i - c_i)\canvec_i$.
+%    As $\vv{a}$ has positive coordinates, $\alpha\le \iprod{\vv{a}}{\vv{b}}\le \iprod{\vv{a}}{\vv{c} + (b_i -c_i)\canvec_i} = 
+%   \iprod{\vv{a}}{\vv{c}} + a_i(b_i - c_i)$, so $b_i\ge (\alpha + a_ic_i - \iprod{\vv{a}}{\vv{c}})/a_i$.
+
+% \daniel[inline]{I prefer this proof.  Shorter, more direct.  We should replace the current proof with this one.  Another benefit of this is that we would no longer need to mention the Minkowski-Weyl Theorem (I didn't know it had a name!) since we would no longer need to make serious use of the recession cone.}
+% }
 
 
-We conclude this subsection with a useful technical result.  Though variations of this lemma are well known, we include a simple proof, for lack of an appropriate reference.
+We conclude this subsection with a useful technical result.
+Though variations of this proposition are well known, we include a simple proof, for lack of an appropriate reference.
 
 
-\begin{lemma}  
+\begin{proposition}  
 \label{vertex: L}
 Let $M$ be an $m \times n$ matrix and let $\vv{b} \in \RR^m$ be a point contained in the cone generated by the columns of $M$.  If $\Q$ is the polyhedron in $\RR^n$  consisting of all points $\vv{t}$ with $\vv{t} \geq \vv{0}$ and $M \vv{t} = \vv{b}$, then a point $\vv{t}^{\ast} \in \Q$ is a vertex of $\Q$ if and only if the columns of $M$ corresponding to the nonzero coordinates of $\vv{t}^{\ast}$ are linearly independent.  %In particular, $\Q$ contains a vertex.
-\end{lemma}
+\end{proposition}
 
 \begin{proof}
    The fact that $\vv{b}$ lies in the cone generated by the columns of $M$ implies that $\Q$ is nonempty.
@@ -371,7 +372,7 @@ The collapsed matrix $\collapse{A}$ is monomial.  Indeed, each row of $\collapse
 
 %\begin{remark}[Collapsed programs]
 %\label{collapsed programs: R}
-%Throughout this article, we will compare linear and integer programs with analogous systems of constraints defined by $A$ and $\collapse{A}$ (e.g., $\LP(A, \vv{u})$ and $\LP(\collapse{A}, \collapse{\vv{u}})$, and $\IP(A, \vv{u})$ and $\IP(\collapse{A}, \collapse{\vv{u}})$).  
+%Throughout this article, we will compare linear and integer programs with analogous systems of constraints defined by $A$ and $\collapse{A}$ (e.g., $\LP(A, \vv{u})$ and $\LP(\collapse{A}, \collapse{\vv{u}})$, and $\IP(A, \vv{u}, q)$ and $\IP(\collapse{A}, \collapse{\vv{u}}, q)$).  
 %
 %By construction, $A$ and $\collapse{A}$ have the same number of columns, and so the feasible sets of these programs live in the same Euclidean space.   Furthermore, as $\collapse{A}$ is obtained by $A$ by omitting some its rows, the constraints imposed by $\collapse{A}$ in the above programs are a subset of those imposed by $A$.  Of course, these programs will differ only when $\O$ is unbounded.  
 %\end{remark}
@@ -534,7 +535,7 @@ Our assertion then follows from the observation that since $A$ is fixed, as $(A,
 
 \subsection{Special points}
 
-\comment[inline]{Special points are how we construct canonical solutions to the integer program $\IP(A, \vv{u}q)$;  see \Cref{canonical-feasible: T} for more details.}
+\comment[inline]{Special points are how we construct canonical solutions to the integer program $\IP(A, \vv{u}, q)$;  see \Cref{canonical-feasible: T} for more details.}
 
 Technicalities that arise in future sections whenever $\mf(A, \vv{u})$ is unbounded force us to consider a certain distinguished subset of optimal points, in which we require a strengthening of condition \eqref{mc decomposition: e} in \Cref{opt set: C}.
 
@@ -620,12 +621,10 @@ By construction, each row of $\collapse{A}$ is a row of $A$, and so the constrai
 \newpage
 \section{An auxiliary integer program}
 
-\
-
 \begin{definition}
-$\IP(A, \vv{u})$ is the integer program in $\ZZ^n$ defined as follows:
+   Given a monomial pair $(A,\vv{u})$ and a nonnegative integer $q$, $\IP(A, \vv{u}, q)$ is the integer program in $\ZZ^n$ defined as follows:
 \begin{enumerate}
-\item The constraints are $\vv{k} \geq \vv{0}$ and $A \vv{k} < \vv{u}$. 
+\item The constraints are $\vv{k} \geq \vv{0}$ and $A \vv{k} < \vv{u}q$. 
 \item The objective function is $\vv{k} \mapsto \norm{\vv{k}}$.
 \end{enumerate}
 \end{definition}
@@ -633,15 +632,15 @@ $\IP(A, \vv{u})$ is the integer program in $\ZZ^n$ defined as follows:
 \emily[inline]{Note somewhere that the feasible set of $\IP$ is bounded:  This is used in the fractal linear program later on.}
 
 \begin{definition}
-The \emph{image} of $\IP(A, \vv{u})$ is the set \[ \im \IP(A, \vv{u}) = A ( \opt \IP(A, \vv{u}) ). \] 
+The \emph{image} of $\IP(A, \vv{u}, q)$ is the set \[ \im \IP(A, \vv{u}, q) = A ( \opt \IP(A, \vv{u}, q) ). \] 
 \end{definition}
 
-% \comment[inline]{Our objective is to study $\IP(A, \vv{u}q)$ whenever $q = p^e$ and $p \gg 0$.}
+% \comment[inline]{Our objective is to study $\IP(A, \vv{u}, q)$ whenever $q = p^e$ and $p \gg 0$.}
 
-% \daniel[inline]{We ``solve" the program $\IP(A, \vv{u}q)$ as is done in the other paper, or as discussed at AIM.  We recall the rough outline below.
+% \daniel[inline]{We ``solve" the program $\IP(A, \vv{u}, q)$ as is done in the other paper, or as discussed at AIM.  We recall the rough outline below.
 % \begin{enumerate}
-% \item Step 1:  Construct a canonical feasible point that depends on $p$.   This step is more involved in this paper, as compared to the other one, and to what we did at AIM.  The extra complexity comes from the fact that there may be many special points, whereas in each of those other cases, there is a unique one.  In any case, we associate to each special point for $(A,\vv{u})$ a canonical feasible point for $\IP(A, \vv{u}q)$.  This will be done in \Cref{canonical-feasible: T}.
-% \item Step 2:  Fix a special point for $(A, \vv{u})$.  Use it to construct a feasible point for $\IP(A, \vv{u}q)$.  Consider an arbitrary feasible point $\vv{k}$ for $\IP(A, \vv{u}q)$, and consider the difference $\vv{h} = \vv{k} - $(canonical feasible point). Translate the constraints on $\vv{k}$ into ones on $\vv{h}$.  This (and more) is done in \Cref{relating-programs: ss}.  Use the resulting inequalities to define a \emph{secondary integer program}.  The secondary program that results from this process is the one $\ip$ appearing in \Cref{aux program: D}.
+% \item Step 1:  Construct a canonical feasible point that depends on $p$.   This step is more involved in this paper, as compared to the other one, and to what we did at AIM.  The extra complexity comes from the fact that there may be many special points, whereas in each of those other cases, there is a unique one.  In any case, we associate to each special point for $(A,\vv{u})$ a canonical feasible point for $\IP(A, \vv{u}, q)$.  This will be done in \Cref{canonical-feasible: T}.
+% \item Step 2:  Fix a special point for $(A, \vv{u})$.  Use it to construct a feasible point for $\IP(A, \vv{u}, q)$.  Consider an arbitrary feasible point $\vv{k}$ for $\IP(A, \vv{u}, q)$, and consider the difference $\vv{h} = \vv{k} - $(canonical feasible point). Translate the constraints on $\vv{k}$ into ones on $\vv{h}$.  This (and more) is done in \Cref{relating-programs: ss}.  Use the resulting inequalities to define a \emph{secondary integer program}.  The secondary program that results from this process is the one $\ip$ appearing in \Cref{aux program: D}.
 % \item Step 3:  Study the finiteness properties of $\ip$.  This is done in this section, before the connection between $\IP$ and $\ip$ is discussed, since these finiteness properties of $\ip$ are called upon to tie down the connection with $\IP$.  The downside is that this order of things makes things here seem really unmotivated.
 % \item Step 4:  Establish that all of the interesting objects that appear in this process do not depend on the choice of special point we picked in Step 2.  This is kind of technical (I bet there is a cleaner way to see this), and is done in \Cref{useful-invariants: ss}.
 % \end{enumerate}
@@ -720,7 +719,7 @@ If $\vv{s} \in \sp_{\QQ}(A, \vv{u})$ and $q \in \ZZ$ is positive, then  \[ \vv{s
 
 
 
-%\subsection{A critical secondary linear program}  We continue to adopt the notation in \Cref{collapse: S}.  Below, we define and study a secondary integer program that will play a key role in our solution of $\IP(A, \vv{u}q)$ for $q \gg 0$.
+%\subsection{A critical secondary linear program}  We continue to adopt the notation in \Cref{collapse: S}.  Below, we define and study a secondary integer program that will play a key role in our solution of $\IP(A, \vv{u}, q)$ for $q \gg 0$.
 %
 %
 %\begin{definition} If $\vv{s} \in \sp_{\QQ}(A, \vv{u})$ and $q>0$ is an integer, then
@@ -830,7 +829,7 @@ We could say ``if $\vv{h}$ is optimal for $\Theta$, then $\ldots$ is optimal for
 \begin{proposition}
 \label{uniform value: P}
 Consider a list $(A, \vv{u}, \vv{s}, q)$, and a denominator $\ell$ for the special point $\vv{s}$.  If $\vv{h} \in \opt \ip(A, \vv{u}, \vv{s}, q)$, and $q/\ell$ is greater than every coordinate of $\vv{1} - \vv{h}$, and every coordinate of $A \vv{h}$, then the point 
-$\vv{s}q - \tail{\vv{s}}_q + \vv{h}$ is optimal for $\IP(A, \vv{u},q)$. 
+$\vv{s}q - \tail{\vv{s}}_q + \vv{h}$ is optimal for $\IP(A, \vv{u}, q)$. 
 \end{proposition}
 
 \begin{proof} We start by describing what it means $q$ to be large.  Fix a positive denominator  $\denom \in \ZZ$ for $\vv{s} \in \sp_{\QQ}(A, \vv{u})$, and choose $q \gg 0$ so that $q/\denom$ is greater than every coordinate of $\vv{1} - \vv{h}$, and every coordinate of $A \vv{h}$.
@@ -849,7 +848,7 @@ A \vv{h} < A \tail{\vv{s}}_q + \vv{w}q.
 
 After projecting to $\rs(\O)^{\perp}$, the bound \eqref{equivalent ineq: e} becomes $\collapse{A \vv{h}} < \collapse{A \tail{\vv{s}}}_q$, which holds by the feasibility of $\vv{h}$ for $\ip$.  If $\O$ is unbounded, then the projection of the right-hand side of \eqref{equivalent ineq: e} to $\rs(\O)$ is at least $\vv{w}q$.  However, as $\denom$ is a denominator for $\vv{w}$, every coordinate of $\vv{w}q$ is at least $q/\denom$,  and our choice of $q \gg 0$ then guarantees that \eqref{equivalent ineq: e} holds after projecting to $\rs(\O)$.  We conclude that \eqref{equivalent ineq: e} holds throughout $\RR^d = \rs(\O) \oplus \rb(\O)^{\perp}$.
 
-In summary, we have just shown that $\vv{k}$ is feasible for $\IP(A, \vv{u}q)$, and so 
+In summary, we have just shown that $\vv{k}$ is feasible for $\IP(A, \vv{u}, q)$, and so 
 \[ \val \IP \geq \norm{\vv{k}} = \ft{A}{\vv{u}} \cdot q - \norm{\tail{\vv{s}}_q} + \val \ip \] 
 where above we have used that $\vv{s} \in \sp_{\QQ}(A, \vv{u})$ and $\vv{h} \in \opt \ip$.  To establish the optimality of $\vv{k}$, it remains to show that the $\val \IP$ equals this lower bound.  However, this is a consequence of \Cref{comparison: P}.
 \end{proof}
@@ -938,7 +937,7 @@ and \Cref{finitely many secondary programs: L} then implies that these sets may 
 \section{Toward solving $\Pi$}
 \label{solving: S}
 
-Suppose that $(A, \vv{u})$ is a monomial pair and that $q$ is positive integer. The goal in this subsection is to demonstrate that the value and image of \[ \IP(A, \vv{u}q) \] vary with $q$ in a uniform way as $q \to \infty$.
+Suppose that $(A, \vv{u})$ is a monomial pair and that $q$ is positive integer. The goal in this subsection is to demonstrate that the value and image of \[ \IP(A, \vv{u}, q) \] vary with $q$ in a uniform way as $q \to \infty$.
 
 \subsection{Relating the two integer programs}
 \label{relating-programs: ss}
@@ -952,23 +951,23 @@ Suppose that $(A, \vv{u})$ is a monomial pair and that $q$ is positive integer. 
 \label{uniform value and image: C}
 Given a monomial matrix $A$, there exists an integer $\beta$ satisfying the following condition\textup:  If $(A, \vv{u})$ is a pair with $\O = \mf(A, \vv{u})$, $\vv{s} \in \sp_{\QQ}(A, \vv{u})$ is a point with denominator $D$, and $q>\beta D$, then 
 %
-\[ \val \IP(A, \vv{u}q) = \ft{A}{\vv{u}} \cdot q - \norm{\tail{\vv{s}}_q} + \val \ip(A, \vv{u}, \vv{s}, q) \] 
+\[ \val \IP(A, \vv{u}, q) = \ft{A}{\vv{u}} \cdot q - \norm{\tail{\vv{s}}_q} + \val \ip(A, \vv{u}, \vv{s}, q) \] 
 %
 and 
-\[ \ol{\im \IP(A, \vv{u}q)} = \collapse{\vv{u}} q - \collapse{A} \tail{\vv{s}}_q + \im \ip(A, \vv{u}, \vv{s}, q) \] 
+\[ \ol{\im \IP(A, \vv{u}, q)} = \collapse{\vv{u}} q - \collapse{A} \tail{\vv{s}}_q + \im \ip(A, \vv{u}, \vv{s}, q) \] 
 where $\collapse{A}$ \textup(respectively, $\collapse{X}$\textup) is the collapse of $A$  \textup(respectively, $X$\textup) along $\O$.
 \end{corollary}
 
 \begin{proof}
 Let $\beta$ be as in \Cref{uniform value: P}.  Fix a pair $(A, \vv{u})$ with $\O = \mf(A, \vv{u})$, a point $\vv{s} \in \sp_{\QQ}(A, \vv{u})$ with denominator $D$, and an integer $q > \beta D$.  Let $\collapse{A}$ and $\collapse{X}$ be as above.
 
-The asserted value of $\IP(A, \vv{u}q)$ follows from \Cref{uniform value: P}.  Next, fix a point $\vv{k} \in \opt \IP(A, \vv{u}q)$, and let $\vv{h}$ be the unique lattice point such that $\vv{k} = \vv{s}q - \tail{\vv{s}}_q + \vv{h}$.  \Cref{comparison: R} implies that $\vv{h}$ is feasible for $\ip = \ip(A, \vv{u}, \vv{s}, q)$, while the optimality of $\vv{k}$ tells us that $\norm{\vv{k}} = \val \IP(A, \vv{u}q)$.  Keeping in mind our formula for $\val \IP(A, \vv{u}q)$, this equality tells us $\norm{\vv{h}} = \val \ip$.    Therefore, $\vv{h}$ must be optimal for $\ip$,  and so $\collapse{A} \vv{h} \in \im \ip$.  Furthermore, as $\collapse{A} \vv{s} = \collapse{\vv{u}}$, 
+The asserted value of $\IP(A, \vv{u}, q)$ follows from \Cref{uniform value: P}.  Next, fix a point $\vv{k} \in \opt \IP(A, \vv{u}, q)$, and let $\vv{h}$ be the unique lattice point such that $\vv{k} = \vv{s}q - \tail{\vv{s}}_q + \vv{h}$.  \Cref{comparison: R} implies that $\vv{h}$ is feasible for $\ip = \ip(A, \vv{u}, \vv{s}, q)$, while the optimality of $\vv{k}$ tells us that $\norm{\vv{k}} = \val \IP(A, \vv{u}, q)$.  Keeping in mind our formula for $\val \IP(A, \vv{u}, q)$, this equality tells us $\norm{\vv{h}} = \val \ip$.    Therefore, $\vv{h}$ must be optimal for $\ip$,  and so $\collapse{A} \vv{h} \in \im \ip$.  Furthermore, as $\collapse{A} \vv{s} = \collapse{\vv{u}}$, 
 
 \[ \collapse{A} \vv{k} = \collapse{\vv{u}} q - \collapse{A} \tail{\vv{s}}_q + \collapse{A} \vv{h}\]  
-which shows that $\collapse{A} ( \opt \IP(A, \vv{u}q))$ = $\ol{\im \IP(A, \vv{u}q)}$ is contained in 
+which shows that $\collapse{A} ( \opt \IP(A, \vv{u}, q))$ = $\ol{\im \IP(A, \vv{u}, q)}$ is contained in 
 \[ \collapse{\vv{u}} q - \collapse{A} \tail{\vv{s}}_q + \im \ip.\]
 
-We now establish the opposite containment:  \Cref{uniform value: P} tells us that \[  \vv{s}q - \tail{\vv{s}}_q + \orep(A, \vv{u}, \vv{s}, q)\] is optimal for $\IP(A, \vv{u}q)$,  while \[ \collapse{A}( \orep(A, \vv{u}, \vv{s}, q)) = \im \ip \] by \Cref{orep: D}.   It follows that $\collapse{A}(\opt \IP(A, \vv{u}q)) = \ol{\im(A, \vv{u}q)}$ contains the set $\collapse{\vv{u}} q - \collapse{A} \tail{\vv{s}}_q + \im \ip$.
+We now establish the opposite containment:  \Cref{uniform value: P} tells us that \[  \vv{s}q - \tail{\vv{s}}_q + \orep(A, \vv{u}, \vv{s}, q)\] is optimal for $\IP(A, \vv{u}, q)$,  while \[ \collapse{A}( \orep(A, \vv{u}, \vv{s}, q)) = \im \ip \] by \Cref{orep: D}.   It follows that $\collapse{A}(\opt \IP(A, \vv{u}, q)) = \ol{\im(A, \vv{u}q)}$ contains the set $\collapse{\vv{u}} q - \collapse{A} \tail{\vv{s}}_q + \im \ip$.
 \end{proof}
 
 \subsection{Some useful invariants}
@@ -1058,8 +1057,8 @@ We record another application of \Cref{uniform denominators for mc:  T} below.
 
 \begin{theorem}
 \label{uniform uniform value and image: T}
-Given a monomial matrix $A$, there exists a integer $\beta$ with the following property\textup:  If $q > \beta$ and $(A, \vv{u})$ is a pair, then \[ \val \IP(A, \vv{u}q) = \ft{A}{\vv{u}} \cdot q - \delta(A, \vv{u}, q) \] and
-\[ \ol{ \im \IP(A, \vv{u}q)} = \collapse{\vv{u}}q - \Delta(A, \vv{u},q) \] where $\collapse{X}$ denotes the collapse of a subset $X$ along $\O = \mf(A, \vv{u})$.
+Given a monomial matrix $A$, there exists a integer $\beta$ with the following property\textup:  If $q > \beta$ and $(A, \vv{u})$ is a pair, then \[ \val \IP(A, \vv{u}, q) = \ft{A}{\vv{u}} \cdot q - \delta(A, \vv{u}, q) \] and
+\[ \ol{ \im \IP(A, \vv{u}, q)} = \collapse{\vv{u}}q - \Delta(A, \vv{u},q) \] where $\collapse{X}$ denotes the collapse of a subset $X$ along $\O = \mf(A, \vv{u})$.
 \end{theorem}
 
 \begin{proof}  
@@ -1069,7 +1068,7 @@ Given a monomial matrix $A$, there exists a integer $\beta$ with the following p
 The following is a consequence of \Cref{comparing deltas: R} and \Cref{uniform uniform value and image: T}.
 
 \begin{corollary}
-Given a monomial matrix $A$, there exists an integer $\beta$ with the following property\textup:  If $q > \beta$ and $(A, \vv{u})$ is a pair with $\O = \mf(A, \vv{u})$, then $\val \IP(A, \vv{u}q) = \val \IP(\collapse{A}, \collapse{\vv{u}}q)$ and $\ol{ \im(A, \vv{u}q)} = \im(\collapse{A}, \collapse{\vv{u}}q)$ where $\collapse{A}$ \textup(respectively, $\collapse{X}$\textup) is the collapse of $A$  \textup(respectively, $X$\textup) along $\O$.
+Given a monomial matrix $A$, there exists an integer $\beta$ with the following property\textup:  If $q > \beta$ and $(A, \vv{u})$ is a pair with $\O = \mf(A, \vv{u})$, then $\val \IP(A, \vv{u}, q) = \val \IP(\collapse{A}, \collapse{\vv{u}}, q)$ and $\ol{ \im(A, \vv{u}q)} = \im(\collapse{A}, \collapse{\vv{u}}q)$ where $\collapse{A}$ \textup(respectively, $\collapse{X}$\textup) is the collapse of $A$  \textup(respectively, $X$\textup) along $\O$.
 \end{corollary}
 
 \emily[inline]{The following could just replace the above statement?  Replace integer programming language with algebraic language? For instance, as follows?}
@@ -1100,9 +1099,9 @@ In what follows, $(A, \vv{u})$ is a $d \times n$ monomial pair.
 
 \begin{definition} 
 \label{aip: D}
-If $p>0$ is a prime integer, then $\IP_p(A, \vv{u})$ is the arithmetic integer program in $\ZZ^n$ defined as follows:
+If $p>0$ is a prime integer and $q$ is a power of $p$, then $\IP_p(A, \vv{u}, q)$ is the arithmetic integer program in $\ZZ^n$ defined as follows:
 \begin{enumerate}
-\item The linear constraints are $\vv{k} \geq \vv{0}$ and $A \vv{k} < \vv{u}$.  
+\item The linear constraints are $\vv{k} \geq \vv{0}$ and $A \vv{k} < \vv{u}q$.  
 \item The nonlinear (arithmetic) constraint is that $\binom{\norm{\vv{k}}}{\vv{k}} \not \equiv 0 \bmod p$.
 By Dickson's Theorem \cite{dickson.multinomial}, this is equivalent to the condition that  if \[ \vv{k} = \vv{k}_0 + \cdots + \vv{k}_l \cdot  p^l\] is the unique terminating base $p$ expansion of $\vv{k}$, then $\norm{\vv{k}_e} < p$ for all $0 \leq e \leq l $.
 \item The objective function is $\vv{k} \mapsto \norm{\vv{k}}$.
@@ -1114,20 +1113,20 @@ By Dickson's Theorem \cite{dickson.multinomial}, this is equivalent to the condi
 \daniel[inline]{It is possible that we don't use the image of this program anywhere.  Maybe only the image of $\ip$.}
 
 \begin{definition}
-The \emph{image} of $\IP_p(A, \vv{u})$ is the set $\im \IP_p(A, \vv{u})$ of all points  $A \vv{k}$ with $\vv{k} \in \opt \IP_p(A, \vv{u})$. 
+The \emph{image} of $\IP_p(A, \vv{u}, q)$ is the set $\im \IP_p(A, \vv{u}, q)$ of all points  $A \vv{k}$ with $\vv{k} \in \opt \IP_p(A, \vv{u}, q)$. 
 \end{definition}
 
-We seek to understand of the behavior of the arithmetic program \[ \IP_p(A, \vv{u}p^e)\] for all $p \gg 0$ and $e \geq 1$.    As will soon be apparent, these programs are more subtle than their non-arithmetic analogs.  We gather some basic general results pertaining to these programs below;  more specialized arguments will appear in the next section.
+We seek to understand of the behavior of the arithmetic program \[ \IP_p(A, \vv{u}, p^e)\] for all $p \gg 0$ and $e \geq 1$.    As will soon be apparent, these programs are more subtle than their non-arithmetic analogs.  We gather some basic general results pertaining to these programs below;  more specialized arguments will appear in the next section.
 
 \begin{lemma} 
-\label{optimal division: L}  If $(A, \vv{u})$ is a monomial pair, then the quotient when dividing any optimal point of $\IP_p(A, \vv{u}p^e)$ by $p^e$ must be optimal for $\IP_p(A, \vv{u})$.
+\label{optimal division: L}  If $(A, \vv{u})$ is a monomial pair, then the quotient when dividing any optimal point of $\IP_p(A, \vv{u}, p^e)$ by $p^e$ must be optimal for $\IP_p(A, \vv{u}, 1)$.
 \end{lemma}
 
-\begin{proof}  Suppose $\vv{g} \in \opt \IP_p(A, \vv{u}p^e)$ and write 
+\begin{proof}  Suppose $\vv{g} \in \opt \IP_p(A, \vv{u}, p^e)$ and write 
 \[ \vv{g} = \vv{h} p^e + \vv{k} \]
 with $\vv{h}$ and $\vv{k}$ in $\NN^d$ such that every coordinate of $\vv{k}$ is less than $p^e$.
 
-The arithmetic constraint satisfied by $\vv{g}$ implies that both $\binom{\norm{\vv{h}}}{\vv{h}}$ and $\binom{\norm{\vv{k}}}{\vv{k}}$ are nonzero mod $p$.  By construction,  the base $p$ expansion of $\vv{k}$ is of the form $\vv{k} = \vv{k}_0 + \cdots + \vv{k}_{e-1} \cdot p^{e-1}$, and so the arithmetic constraint satisfied by $\vv{k}$ implies that $\norm{\vv{k}} < p^e$.   Consequently, if $\vv{h}$ were not optimal for $\IP_p(A, \vv{u})$, then there would exist $\vv{m} \in \IP_p(A, \vv{u})$ with $\norm{\vv{m}} \geq \norm{\vv{h}} + 1$, which would lead to a point $\vv{m}p^e \in \IP_p(A, \vv{u}p^e)$ whose norm is \[ \norm{\vv{m}}p^e \geq \norm{\vv{h}} \cdot p^e + p^e >  \norm{\vv{h}} \cdot p^e + \norm{\vv{k}} = \norm{\vv{g}}\] which contradicts the optimality of $\vv{g}$. % We conclude that $\vv{h} \in \opt \IP_p(A, \vv{u})$.
+The arithmetic constraint satisfied by $\vv{g}$ implies that both $\binom{\norm{\vv{h}}}{\vv{h}}$ and $\binom{\norm{\vv{k}}}{\vv{k}}$ are nonzero mod $p$.  By construction,  the base $p$ expansion of $\vv{k}$ is of the form $\vv{k} = \vv{k}_0 + \cdots + \vv{k}_{e-1} \cdot p^{e-1}$, and so the arithmetic constraint satisfied by $\vv{k}$ implies that $\norm{\vv{k}} < p^e$.   Consequently, if $\vv{h}$ were not optimal for $\IP_p(A, \vv{u}, 1)$, then there would exist $\vv{m} \in \IP_p(A, \vv{u}, 1)$ with $\norm{\vv{m}} \geq \norm{\vv{h}} + 1$, which would lead to a point $\vv{m}p^e \in \IP_p(A, \vv{u}, p^e)$ whose norm is \[ \norm{\vv{m}}p^e \geq \norm{\vv{h}} \cdot p^e + p^e >  \norm{\vv{h}} \cdot p^e + \norm{\vv{k}} = \norm{\vv{g}}\] which contradicts the optimality of $\vv{g}$. % We conclude that $\vv{h} \in \opt \IP_p(A, \vv{u}, 1)$.
 \end{proof}
 
 We record some corollaries of \Cref{optimal division: L} below.
@@ -1137,7 +1136,7 @@ We record some corollaries of \Cref{optimal division: L} below.
 \begin{corollary} 
 \label{natural bounds: C}
 If $(A, \vv{u})$ is a monomial pair and $e \geq 1$, then 
-\[ \val \IP_p(A, \vv{u}) \cdot p^e \leq \val \IP_p(A, \vv{u}p^e) < (\val \IP_p(A, \vv{u}) +1) \cdot p^e. \]
+\[ \val \IP_p(A, \vv{u}, 1) \cdot p^e \leq \val \IP_p(A, \vv{u}, p^e) < (\val \IP_p(A, \vv{u}, 1) +1) \cdot p^e. \]
 \end{corollary}
 \begin{proof}
 These bounds follow from a direct computation of the norm of the optimal point $\vv{g}$ in the proof of \Cref{optimal division: L}
